--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
     "svelte": "^3.44.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "@tailwindcss/forms": "^0.5.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+  }
 }
