--- a/package.json
+++ b/package.json
@@ -14,18 +14,17 @@
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/adapter-static": "^1.0.0-next.31",
     "@sveltejs/kit": "next",
+    "@tailwindcss/forms": "^0.5.2",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^4.0.0",
+    "flowbite-svelte": "^0.17.2",
     "postcss": "^8.4.14",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
     "svelte": "^3.44.0",
-    "tailwindcss": "^3.0.24",
-    "@tailwindcss/forms": "^0.5.2"
+    "tailwindcss": "^3.0.24"
   },
-  "type": "module",
-  "dependencies": {
-  }
+  "type": "module"
 }
